<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_peekHeight="auto"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:id="@+id/field_detail_cl">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/background_light"
        android:id="@+id/bottomSheetFoto"
        android:layout_gravity="top"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/list_item_spacing_half"
            android:paddingLeft="@dimen/list_item_spacing"
            android:paddingRight="@dimen/list_item_spacing"
            android:paddingTop="@dimen/list_item_spacing_half"
            android:layout_gravity="left"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:id="@+id/heading"
            android:text="-name-"/>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/namePanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/field_detail_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/name_textView"
                android:imeOptions="actionNext"
                android:paddingBottom="@dimen/list_item_spacing_half"
                android:paddingLeft="@dimen/list_item_spacing"
                android:hint="@string/field_default_name"
                android:paddingRight="@dimen/list_item_spacing"
                android:paddingTop="@dimen/list_item_spacing_half"
                 />

            <TextView
                android:id="@+id/name_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/list_item_spacing"
                android:text="@string/dialogItem_Name" />

        </RelativeLayout>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/regionPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/field_detail_region_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/region_textView"
                android:hint="@string/county_default_name"
                android:paddingBottom="@dimen/list_item_spacing_half"
                android:paddingLeft="@dimen/list_item_spacing"
                android:paddingRight="@dimen/list_item_spacing"
                android:paddingTop="@dimen/list_item_spacing_half" />

        <TextView
            android:id="@+id/region_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/list_item_spacing"
            android:text="@string/dialogItem_Location" />

    </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </RelativeLayout>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/spinnerPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/list_item_spacing"
                android:text="@string/dialogItem_Type" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:measureAllChildren="false"
            android:layout_toEndOf="@+id/text_type">



            <Spinner
                android:id="@+id/field_detail_state_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingBottom="@dimen/list_item_spacing_half"
                android:paddingLeft="@dimen/list_item_spacing"
                android:paddingRight="@dimen/list_item_spacing"
                android:paddingTop="@dimen/list_item_spacing_half"
                android:text="-state-"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/sizePanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/field_detail_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"

                android:layout_toEndOf="@+id/textView"
                android:paddingBottom="@dimen/list_item_spacing_half"
                android:paddingLeft="@dimen/list_item_spacing"
                android:paddingRight="@dimen/list_item_spacing"
                android:paddingTop="@dimen/list_item_spacing_half"
                android:text="-size-" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/field_detail_size"
                android:layout_alignBottom="@+id/field_detail_size"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/list_item_spacing"
                android:text="@string/dialogItem_Size" />

        </RelativeLayout>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/policyholderPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/field_detail_policyholder_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:hint="@string/owner_default_name"
                android:layout_toEndOf="@+id/policyholder_textView"
                android:paddingBottom="@dimen/list_item_spacing_half"
                android:paddingLeft="@dimen/list_item_spacing"
                android:paddingRight="@dimen/list_item_spacing"
                android:paddingTop="@dimen/list_item_spacing_half"
                android:singleLine="false" />

            <TextView
                android:id="@+id/policyholder_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/list_item_spacing"
                android:text="@string/dialogItem_Owner" />

        </RelativeLayout>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/finish_edit_button_agr"
                android:paddingLeft="@dimen/list_item_spacing"
                android:paddingRight="@dimen/list_item_spacing"
                android:paddingTop="@dimen/list_item_spacing_half"
                android:paddingBottom="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_save_black_24px"
                android:background="@null"
                android:text="@string/edit_field_finish_button"/>

            <ImageButton
                android:id="@+id/delete_button"
                android:paddingLeft="@dimen/list_item_spacing"
                android:paddingRight="@dimen/list_item_spacing"
                android:paddingTop="@dimen/list_item_spacing_half"
                android:paddingBottom="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/finish_edit_button_agr"
                android:src="@drawable/ic_delete_forever_black_24px"
                android:background="@null"
                android:text="@string/edit_field_delete_button"/>



        </RelativeLayout>


        <!-- placeholder -->
        <View
            android:layout_width="0dp"
            android:layout_height="16dp"/>
    </LinearLayout>





</android.support.design.widget.CoordinatorLayout>