...
    <item
        android:id="@+id/action_menu_redo"
        android:orderInCategory="102"
        android:title="@string/redo_Button"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_menu_done"
        android:orderInCategory="101"
        android:title="@string/done_Button"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_menu_tutorial"
...
