...
                android:textStyle="bold"
                android:textColor="#FAFAFA"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:layout_gravity="bottom|end"
                app:srcCompat="@drawable/ic_add_location_white_24px" />

...
